[gd_scene load_steps=9 format=4 uid="uid://oeytoajn0hgv"]

[ext_resource type="Texture2D" uid="uid://5gwuyss2webn" path="res://tilemaps/inside.png" id="1_cau40"]
[ext_resource type="Script" path="res://interior_casa.gd" id="1_ts0hq"]
[ext_resource type="Texture2D" uid="uid://1fsk1b75a2um" path="res://objects/furniture.png" id="2_topw0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k7d7y"]
texture = ExtResource("1_cau40")
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6atp1"]
texture = ExtResource("2_topw0")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0

[sub_resource type="TileSet" id="TileSet_6m3ny"]
sources/1 = SubResource("TileSetAtlasSource_6atp1")
sources/0 = SubResource("TileSetAtlasSource_k7d7y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh4k7"]
size = Vector2(28, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro7s7"]
size = Vector2(15, 29)

[node name="interior_casa" type="Node2D"]
script = ExtResource("1_ts0hq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 396.0
offset_top = 217.0
offset_right = 779.0
offset_bottom = 431.0
color = Color(0, 0, 0, 1)

[node name="parede" type="TileMapLayer" parent="."]
position = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAZAA8AAAADAAEAAAAZABAAAAADAAEAAAAZABEAAAADAAEAAAAZABIAAAADAAEAAAAZABMAAAADAAEAAAAZABQAAAADAAEAAAAZABUAAAADAAEAAAAZABYAAAADAAEAAAAZABcAAAADAAEAAAAZABgAAAADAAEAAAAvAA8AAAAGAAEAAAAvABAAAAAGAAEAAAAvABEAAAAGAAEAAAAvABIAAAAGAAEAAAAvABMAAAAGAAEAAAAvABQAAAAGAAEAAAAvABUAAAAGAAEAAAAvABYAAAAGAAEAAAAvABcAAAAGAAEAAAAvABgAAAAGAAEAAAAaAA8AAAABAAQAAAAbAA8AAAABAAQAAAAcAA8AAAABAAQAAAAdAA8AAAABAAQAAAAeAA8AAAABAAQAAAAfAA8AAAABAAQAAAAgAA8AAAABAAQAAAAhAA8AAAABAAQAAAAiAA8AAAABAAQAAAAjAA8AAAABAAQAAAAkAA8AAAABAAQAAAAlAA8AAAABAAQAAAAmAA8AAAABAAQAAAAnAA8AAAABAAQAAAAoAA8AAAABAAQAAAApAA8AAAABAAQAAAAqAA8AAAABAAQAAAArAA8AAAABAAQAAAAsAA8AAAABAAQAAAAtAA8AAAABAAQAAAAtABAAAAABAAQAAAAuABAAAAABAAQAAAAuAA8AAAABAAQAAAAsABAAAAABAAQAAAArABAAAAABAAQAAAAqABAAAAABAAQAAAApABAAAAABAAQAAAAoABAAAAABAAQAAAAnABAAAAABAAQAAAAmABAAAAABAAQAAAAlABAAAAABAAQAAAAkABAAAAABAAQAAAAjABAAAAABAAQAAAAiABAAAAABAAQAAAAhABAAAAABAAQAAAAgABAAAAABAAQAAAAfABAAAAABAAQAAAAeABAAAAABAAQAAAAdABAAAAABAAQAAAAcABAAAAABAAQAAAAbABAAAAABAAQAAAAaABAAAAABAAQAAAAaABEAAAABAAQAAAAbABEAAAABAAQAAAAcABEAAAABAAQAAAAdABEAAAABAAQAAAAeABEAAAABAAQAAAAfABEAAAABAAQAAAAgABEAAAABAAQAAAAhABEAAAABAAQAAAAiABEAAAABAAQAAAAjABEAAAABAAQAAAAkABEAAAABAAQAAAAlABEAAAABAAQAAAAmABEAAAABAAQAAAAnABEAAAABAAQAAAAoABEAAAABAAQAAAApABEAAAABAAQAAAAqABEAAAABAAQAAAArABEAAAABAAQAAAAsABEAAAABAAQAAAAtABEAAAABAAQAAAAuABEAAAABAAQAAAAaABIAAAABAAQAAAAbABIAAAABAAQAAAAcABIAAAABAAQAAAAdABIAAAABAAQAAAAeABIAAAABAAQAAAAfABIAAAABAAQAAAAgABIAAAABAAQAAAAhABIAAAABAAQAAAAiABIAAAABAAQAAAAjABIAAAABAAQAAAAkABIAAAABAAQAAAAlABIAAAABAAQAAAAmABIAAAABAAQAAAAnABIAAAABAAQAAAAoABIAAAABAAQAAAApABIAAAABAAQAAAAqABIAAAABAAQAAAArABIAAAABAAQAAAAsABIAAAABAAQAAAAtABIAAAABAAQAAAAuABIAAAABAAQAAAAZAA0AAAADAAAAAAAaAA0AAAAEAAEAAAAbAA0AAAAEAAEAAAAcAA0AAAAEAAEAAAAdAA0AAAAEAAEAAAAeAA0AAAAEAAEAAAAfAA0AAAAEAAEAAAAgAA0AAAAEAAEAAAAhAA0AAAAEAAEAAAAiAA0AAAAEAAEAAAAjAA0AAAAEAAEAAAAkAA0AAAAEAAEAAAAlAA0AAAAEAAEAAAAmAA0AAAAEAAEAAAAnAA0AAAAEAAEAAAAoAA0AAAAEAAEAAAApAA0AAAAEAAEAAAAqAA0AAAAEAAEAAAArAA0AAAAEAAEAAAAsAA0AAAAEAAEAAAAtAA0AAAAEAAEAAAAuAA0AAAAEAAEAAAAvAA0AAAAGAAAAAAAvAA4AAAAGAAEAAAAZAA4AAAADAAEAAAAZABoAAAADAAQAAAAaABoAAAAEAAIAAAAbABoAAAAEAAIAAAAcABoAAAAEAAIAAAAdABoAAAAEAAIAAAAeABoAAAAEAAIAAAAfABoAAAAEAAIAAAAgABoAAAAEAAIAAAAhABoAAAAEAAIAAAAiABoAAAAEAAIAAAAjABoAAAAEAAIAAAAkABoAAAAEAAIAAAAlABoAAAAEAAIAAAAmABoAAAAEAAIAAAAnABoAAAAEAAIAAAAoABoAAAAEAAIAAAApABoAAAAEAAIAAAAqABoAAAAEAAIAAAArABoAAAAEAAIAAAAsABoAAAAEAAIAAAAtABoAAAAEAAIAAAAuABoAAAAEAAIAAAAvABoAAAAGAAQAAAAZABkAAAADAAEAAAAvABkAAAAGAAEAAAAaAA4AAAABAAQAAAAbAA4AAAABAAQAAAAcAA4AAAABAAQAAAAdAA4AAAABAAQAAAAeAA4AAAABAAQAAAAfAA4AAAABAAQAAAAgAA4AAAABAAQAAAAhAA4AAAABAAQAAAAiAA4AAAABAAQAAAAjAA4AAAABAAQAAAAkAA4AAAABAAQAAAAlAA4AAAABAAQAAAAmAA4AAAABAAQAAAAnAA4AAAABAAQAAAAoAA4AAAABAAQAAAApAA4AAAABAAQAAAAqAA4AAAABAAQAAAArAA4AAAABAAQAAAAsAA4AAAABAAQAAAAtAA4AAAABAAQAAAAuAA4AAAABAAQAAAA=")
tile_set = SubResource("TileSet_6m3ny")

[node name="piso" type="TileMapLayer" parent="."]
position = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAZAA8AAAADAAEAAAAZABAAAAADAAEAAAAZABEAAAADAAEAAAAZABIAAAADAAEAAAAZABMAAAADAAEAAAAZABQAAAADAAEAAAAZABUAAAADAAEAAAAZABYAAAADAAEAAAAZABcAAAADAAEAAAAZABgAAAADAAEAAAAvAA8AAAAGAAEAAAAvABAAAAAGAAEAAAAvABEAAAAGAAEAAAAvABIAAAAGAAEAAAAvABMAAAAGAAEAAAAvABQAAAAGAAEAAAAvABUAAAAGAAEAAAAvABYAAAAGAAEAAAAvABcAAAAGAAEAAAAvABgAAAAGAAEAAAAaAA8AAAABAAQAAAAbAA8AAAABAAQAAAAcAA8AAAABAAQAAAAdAA8AAAABAAQAAAAeAA8AAAABAAQAAAAfAA8AAAABAAQAAAAgAA8AAAABAAQAAAAhAA8AAAABAAQAAAAiAA8AAAABAAQAAAAjAA8AAAABAAQAAAAkAA8AAAABAAQAAAAlAA8AAAABAAQAAAAmAA8AAAABAAQAAAAnAA8AAAABAAQAAAAoAA8AAAABAAQAAAApAA8AAAABAAQAAAAqAA8AAAABAAQAAAArAA8AAAABAAQAAAAsAA8AAAABAAQAAAAtAA8AAAABAAQAAAAtABAAAAABAAQAAAAuABAAAAABAAQAAAAuAA8AAAABAAQAAAAsABAAAAABAAQAAAArABAAAAABAAQAAAAqABAAAAABAAQAAAApABAAAAABAAQAAAAoABAAAAABAAQAAAAnABAAAAABAAQAAAAmABAAAAABAAQAAAAlABAAAAABAAQAAAAkABAAAAABAAQAAAAjABAAAAABAAQAAAAiABAAAAABAAQAAAAhABAAAAABAAQAAAAgABAAAAABAAQAAAAfABAAAAABAAQAAAAeABAAAAABAAQAAAAdABAAAAABAAQAAAAcABAAAAABAAQAAAAbABAAAAABAAQAAAAaABAAAAABAAQAAAAaABEAAAABAAQAAAAbABEAAAABAAQAAAAcABEAAAABAAQAAAAdABEAAAABAAQAAAAeABEAAAABAAQAAAAfABEAAAABAAQAAAAgABEAAAABAAQAAAAhABEAAAABAAQAAAAiABEAAAABAAQAAAAjABEAAAABAAQAAAAkABEAAAABAAQAAAAlABEAAAABAAQAAAAmABEAAAABAAQAAAAnABEAAAABAAQAAAAoABEAAAABAAQAAAApABEAAAABAAQAAAAqABEAAAABAAQAAAArABEAAAABAAQAAAAsABEAAAABAAQAAAAtABEAAAABAAQAAAAuABEAAAABAAQAAAAaABIAAAABAAQAAAAbABIAAAABAAQAAAAcABIAAAABAAQAAAAdABIAAAABAAQAAAAeABIAAAABAAQAAAAfABIAAAABAAQAAAAgABIAAAABAAQAAAAhABIAAAABAAQAAAAiABIAAAABAAQAAAAjABIAAAABAAQAAAAkABIAAAABAAQAAAAlABIAAAABAAQAAAAmABIAAAABAAQAAAAnABIAAAABAAQAAAAoABIAAAABAAQAAAApABIAAAABAAQAAAAqABIAAAABAAQAAAArABIAAAABAAQAAAAsABIAAAABAAQAAAAtABIAAAABAAQAAAAuABIAAAABAAQAAAAZAA0AAAADAAAAAAAaAA0AAAAEAAEAAAAbAA0AAAAEAAEAAAAcAA0AAAAEAAEAAAAdAA0AAAAEAAEAAAAeAA0AAAAEAAEAAAAfAA0AAAAEAAEAAAAgAA0AAAAEAAEAAAAhAA0AAAAEAAEAAAAiAA0AAAAEAAEAAAAjAA0AAAAEAAEAAAAkAA0AAAAEAAEAAAAlAA0AAAAEAAEAAAAmAA0AAAAEAAEAAAAnAA0AAAAEAAEAAAAoAA0AAAAEAAEAAAApAA0AAAAEAAEAAAAqAA0AAAAEAAEAAAArAA0AAAAEAAEAAAAsAA0AAAAEAAEAAAAtAA0AAAAEAAEAAAAuAA0AAAAEAAEAAAAvAA0AAAAGAAAAAAAvAA4AAAAGAAEAAAAZAA4AAAADAAEAAAAZABoAAAADAAQAAAAaABoAAAAEAAIAAAAbABoAAAAEAAIAAAAcABoAAAAEAAIAAAAdABoAAAAEAAIAAAAeABoAAAAEAAIAAAAfABoAAAAEAAIAAAAgABoAAAAEAAIAAAAhABoAAAAEAAIAAAAiABoAAAAEAAIAAAAjABoAAAAEAAIAAAAkABoAAAAEAAIAAAAlABoAAAAEAAIAAAAmABoAAAAEAAIAAAAnABoAAAAEAAIAAAAoABoAAAAEAAIAAAApABoAAAAEAAIAAAAqABoAAAAEAAIAAAArABoAAAAEAAIAAAAsABoAAAAEAAIAAAAtABoAAAAEAAIAAAAuABoAAAAEAAIAAAAvABoAAAAGAAQAAAAZABkAAAADAAEAAAAvABkAAAAGAAEAAAAaAA4AAAABAAQAAAAbAA4AAAABAAQAAAAcAA4AAAABAAQAAAAdAA4AAAABAAQAAAAeAA4AAAABAAQAAAAfAA4AAAABAAQAAAAgAA4AAAABAAQAAAAhAA4AAAABAAQAAAAiAA4AAAABAAQAAAAjAA4AAAABAAQAAAAkAA4AAAABAAQAAAAlAA4AAAABAAQAAAAmAA4AAAABAAQAAAAnAA4AAAABAAQAAAAoAA4AAAABAAQAAAApAA4AAAABAAQAAAAqAA4AAAABAAQAAAArAA4AAAABAAQAAAAsAA4AAAABAAQAAAAtAA4AAAABAAQAAAAuAA4AAAABAAQAAAAaABMAAAAAAAAAAAAaABQAAAAAAAEAAAAbABMAAAABAAAAAAAbABQAAAABAAEAAAAaABUAAAAAAAAAAAAaABYAAAAAAAEAAAAbABUAAAABAAAAAAAbABYAAAABAAEAAAAaABcAAAAAAAAAAAAaABgAAAAAAAEAAAAbABcAAAABAAAAAAAbABgAAAABAAEAAAAaABkAAAAAAAAAAAAbABkAAAABAAAAAAAcABMAAAAAAAAAAAAcABQAAAAAAAEAAAAdABMAAAABAAAAAAAdABQAAAABAAEAAAAcABUAAAAAAAAAAAAcABYAAAAAAAEAAAAdABUAAAABAAAAAAAdABYAAAABAAEAAAAcABcAAAAAAAAAAAAcABgAAAAAAAEAAAAdABcAAAABAAAAAAAdABgAAAABAAEAAAAcABkAAAAAAAAAAAAdABkAAAABAAAAAAAeABMAAAAAAAAAAAAeABQAAAAAAAEAAAAfABMAAAABAAAAAAAfABQAAAABAAEAAAAeABUAAAAAAAAAAAAeABYAAAAAAAEAAAAfABUAAAABAAAAAAAfABYAAAABAAEAAAAeABcAAAAAAAAAAAAeABgAAAAAAAEAAAAfABcAAAABAAAAAAAfABgAAAABAAEAAAAeABkAAAAAAAAAAAAfABkAAAABAAAAAAAgABMAAAAAAAAAAAAgABQAAAAAAAEAAAAhABMAAAABAAAAAAAhABQAAAABAAEAAAAgABUAAAAAAAAAAAAgABYAAAAAAAEAAAAhABUAAAABAAAAAAAhABYAAAABAAEAAAAgABcAAAAAAAAAAAAgABgAAAAAAAEAAAAhABcAAAABAAAAAAAhABgAAAABAAEAAAAgABkAAAAAAAAAAAAhABkAAAABAAAAAAAiABMAAAAAAAAAAAAiABQAAAAAAAEAAAAjABMAAAABAAAAAAAjABQAAAABAAEAAAAiABUAAAAAAAAAAAAiABYAAAAAAAEAAAAjABUAAAABAAAAAAAjABYAAAABAAEAAAAiABcAAAAAAAAAAAAiABgAAAAAAAEAAAAjABcAAAABAAAAAAAjABgAAAABAAEAAAAiABkAAAAAAAAAAAAjABkAAAABAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAEAAAAlABMAAAABAAAAAAAlABQAAAABAAEAAAAkABUAAAAAAAAAAAAkABYAAAAAAAEAAAAlABUAAAABAAAAAAAlABYAAAABAAEAAAAkABcAAAAAAAAAAAAkABgAAAAAAAEAAAAlABcAAAABAAAAAAAlABgAAAABAAEAAAAkABkAAAAAAAAAAAAlABkAAAABAAAAAAAmABMAAAAAAAAAAAAmABQAAAAAAAEAAAAnABMAAAABAAAAAAAnABQAAAABAAEAAAAmABUAAAAAAAAAAAAmABYAAAAAAAEAAAAnABUAAAABAAAAAAAnABYAAAABAAEAAAAmABcAAAAAAAAAAAAmABgAAAAAAAEAAAAnABcAAAABAAAAAAAnABgAAAABAAEAAAAmABkAAAAAAAAAAAAnABkAAAABAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAEAAAApABMAAAABAAAAAAApABQAAAABAAEAAAAoABUAAAAAAAAAAAAoABYAAAAAAAEAAAApABUAAAABAAAAAAApABYAAAABAAEAAAAoABcAAAAAAAAAAAAoABgAAAAAAAEAAAApABcAAAABAAAAAAApABgAAAABAAEAAAAoABkAAAAAAAAAAAApABkAAAABAAAAAAAqABMAAAAAAAAAAAAqABQAAAAAAAEAAAArABMAAAABAAAAAAArABQAAAABAAEAAAAqABUAAAAAAAAAAAAqABYAAAAAAAEAAAArABUAAAABAAAAAAArABYAAAABAAEAAAAqABcAAAAAAAAAAAAqABgAAAAAAAEAAAArABcAAAABAAAAAAArABgAAAABAAEAAAAqABkAAAAAAAAAAAArABkAAAABAAAAAAAsABMAAAAAAAAAAAAsABQAAAAAAAEAAAAtABMAAAABAAAAAAAtABQAAAABAAEAAAAsABUAAAAAAAAAAAAsABYAAAAAAAEAAAAtABUAAAABAAAAAAAtABYAAAABAAEAAAAsABcAAAAAAAAAAAAsABgAAAAAAAEAAAAtABcAAAABAAAAAAAtABgAAAABAAEAAAAsABkAAAAAAAAAAAAtABkAAAABAAAAAAAuABMAAAAAAAAAAAAuABQAAAAAAAEAAAAuABUAAAAAAAAAAAAuABYAAAAAAAEAAAAuABcAAAAAAAAAAAAuABgAAAAAAAEAAAAuABkAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_6m3ny")

[node name="moveis" type="TileMapLayer" parent="."]
position = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAZAA8AAAADAAEAAAAZABAAAAADAAEAAAAZABEAAAADAAEAAAAZABIAAAADAAEAAAAZABMAAAADAAEAAAAZABQAAAADAAEAAAAZABUAAAADAAEAAAAZABYAAAADAAEAAAAZABcAAAADAAEAAAAZABgAAAADAAEAAAAvAA8AAAAGAAEAAAAvABAAAAAGAAEAAAAvABEAAAAGAAEAAAAvABIAAAAGAAEAAAAvABMAAAAGAAEAAAAvABQAAAAGAAEAAAAvABUAAAAGAAEAAAAvABYAAAAGAAEAAAAvABcAAAAGAAEAAAAvABgAAAAGAAEAAAAaAA8AAAABAAQAAAAbAA8AAAABAAQAAAAcAA8AAAABAAQAAAAdAA8AAAABAAQAAAAeAA8AAAABAAQAAAAfAA8AAAABAAQAAAAhAA8AAAABAAQAAAAiAA8AAAABAAQAAAAjAA8AAAABAAQAAAAkAA8AAAABAAQAAAAlAA8AAAABAAQAAAAmAA8AAAABAAQAAAAnAA8AAAABAAQAAAAoAA8AAAABAAQAAAApAA8AAAABAAQAAAAqAA8AAAABAAQAAAArAA8AAAABAAQAAAAsAA8AAAABAAQAAAAtAA8AAAABAAQAAAAtABAAAAABAAQAAAAuABAAAQAFAAYAAAAuAA8AAAABAAQAAAAsABAAAQAFAAUAAAArABAAAQAEAAAAAAAqABAAAAABAAQAAAApABAAAAABAAQAAAAnABAAAAABAAQAAAAmABAAAAABAAQAAAAlABAAAAABAAQAAAAjABAAAAABAAQAAAAiABAAAQABAAoAAAAhABAAAAABAAQAAAAfABAAAAABAAQAAAAdABAAAQAEAAAAAAAaABAAAAABAAQAAAAaABEAAAABAAQAAAAbABEAAAABAAQAAAAcABEAAAABAAQAAAAdABEAAAABAAQAAAAeABEAAAABAAQAAAAfABEAAAABAAQAAAAgABEAAAABAAQAAAAhABEAAAABAAQAAAAiABEAAAABAAQAAAAjABEAAAABAAQAAAAkABEAAAABAAQAAAAlABEAAAABAAQAAAAmABEAAAABAAQAAAAnABEAAAABAAQAAAAoABEAAAABAAQAAAApABEAAAABAAQAAAAqABEAAAABAAQAAAArABEAAAABAAQAAAAsABEAAAABAAQAAAAtABEAAAABAAQAAAAuABEAAAABAAQAAAAaABIAAAABAAQAAAAbABIAAAABAAQAAAAcABIAAAABAAQAAAAdABIAAAABAAQAAAAeABIAAAABAAQAAAAfABIAAAABAAQAAAAgABIAAAABAAQAAAAhABIAAAABAAQAAAAiABIAAAABAAQAAAAjABIAAAABAAQAAAAkABIAAAABAAQAAAAlABIAAAABAAQAAAAmABIAAAABAAQAAAAnABIAAAABAAQAAAAoABIAAAABAAQAAAApABIAAAABAAQAAAAqABIAAAABAAQAAAArABIAAAABAAQAAAAsABIAAQADAAMAAAAtABIAAQAAAAIAAAAuABIAAQABAAIAAAAZAA0AAAADAAAAAAAaAA0AAAAEAAEAAAAbAA0AAAAEAAEAAAAcAA0AAAAEAAEAAAAdAA0AAAAEAAEAAAAeAA0AAAAEAAEAAAAfAA0AAAAEAAEAAAAgAA0AAAAEAAEAAAAhAA0AAAAEAAEAAAAiAA0AAAAEAAEAAAAjAA0AAAAEAAEAAAAkAA0AAAAEAAEAAAAlAA0AAAAEAAEAAAAmAA0AAAAEAAEAAAAnAA0AAAAEAAEAAAAoAA0AAAAEAAEAAAApAA0AAAAEAAEAAAAqAA0AAAAEAAEAAAArAA0AAAAEAAEAAAAsAA0AAAAEAAEAAAAtAA0AAAAEAAEAAAAuAA0AAAAEAAEAAAAvAA0AAAAGAAAAAAAvAA4AAAAGAAEAAAAZAA4AAAADAAEAAAAZABoAAAADAAQAAAAaABoAAAAEAAIAAAAbABoAAAAEAAIAAAAcABoAAAAEAAIAAAAdABoAAAAEAAIAAAAeABoAAAAEAAIAAAAfABoAAAAEAAIAAAAgABoAAAAEAAIAAAAhABoAAAAEAAIAAAAiABoAAAAEAAIAAAAjABoAAAAEAAIAAAAkABoAAAAEAAIAAAAlABoAAAAEAAIAAAAmABoAAAAEAAIAAAAnABoAAAAEAAIAAAAoABoAAAAEAAIAAAApABoAAAAEAAIAAAAqABoAAAAEAAIAAAArABoAAAAEAAIAAAAsABoAAAAEAAIAAAAtABoAAAAEAAIAAAAuABoAAAAEAAIAAAAvABoAAAAGAAQAAAAZABkAAAADAAEAAAAvABkAAAAGAAEAAAAaAA4AAAABAAQAAAAbAA4AAAABAAQAAAAcAA4AAAABAAQAAAAdAA4AAAABAAQAAAAeAA4AAAABAAQAAAAfAA4AAAABAAQAAAAgAA4AAAABAAQAAAAhAA4AAAABAAQAAAAiAA4AAAABAAQAAAAjAA4AAAABAAQAAAAkAA4AAAABAAQAAAAlAA4AAAABAAQAAAAmAA4AAAABAAQAAAAnAA4AAAABAAQAAAAoAA4AAAABAAQAAAApAA4AAAABAAQAAAAqAA4AAAABAAQAAAArAA4AAAABAAQAAAAsAA4AAAABAAQAAAAtAA4AAAABAAQAAAAuAA4AAAABAAQAAAAaABMAAQAAAAAAAAAaABQAAQAAAAEAAAAbABQAAQAEAAgAAAAaABUAAAAAAAAAAAAaABYAAAAAAAEAAAAbABUAAAABAAAAAAAbABYAAQAAAAUAAAAaABcAAQADAAUAAAAaABgAAQADAAYAAAAbABcAAQAAAAYAAAAbABgAAQAEAAIAAAAaABkAAAAAAAAAAAAbABkAAQAEAAMAAAAcABMAAQAFAAcAAAAcABQAAQAFAAgAAAAdABMAAAABAAAAAAAdABQAAAABAAEAAAAcABUAAAAAAAAAAAAcABYAAQAAAAUAAAAdABUAAAABAAAAAAAdABYAAAABAAEAAAAcABcAAQAAAAYAAAAcABgAAQAFAAIAAAAdABcAAQACAAUAAAAdABgAAQACAAYAAAAcABkAAQAFAAMAAAAdABkAAAABAAAAAAAeABMAAAAAAAAAAAAeABQAAAAAAAEAAAAfABMAAAABAAAAAAAfABQAAAABAAEAAAAeABUAAAAAAAAAAAAeABYAAAAAAAEAAAAfABUAAAABAAAAAAAfABYAAAABAAEAAAAeABcAAAAAAAAAAAAeABgAAAAAAAEAAAAfABcAAAABAAAAAAAfABgAAAABAAEAAAAeABkAAAAAAAAAAAAfABkAAAABAAAAAAAgABMAAAAAAAAAAAAgABQAAAAAAAEAAAAhABMAAAABAAAAAAAhABQAAAABAAEAAAAgABUAAAAAAAAAAAAgABYAAAAAAAEAAAAhABUAAAABAAAAAAAhABYAAAABAAEAAAAgABcAAAAAAAAAAAAgABgAAAAAAAEAAAAhABcAAAABAAAAAAAhABgAAAABAAEAAAAgABkAAAAAAAAAAAAhABkAAAABAAAAAAAiABMAAAAAAAAAAAAiABQAAAAAAAEAAAAjABMAAAABAAAAAAAjABQAAAABAAEAAAAiABUAAAAAAAAAAAAiABYAAAAAAAEAAAAjABUAAAABAAAAAAAjABYAAAABAAEAAAAiABcAAAAAAAAAAAAiABgAAAAAAAEAAAAjABcAAAABAAAAAAAjABgAAAABAAEAAAAiABkAAAAAAAAAAAAjABkAAAABAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAEAAAAlABMAAAABAAAAAAAlABQAAAABAAEAAAAkABUAAAAAAAAAAAAkABYAAAAAAAEAAAAlABUAAAABAAAAAAAlABYAAAABAAEAAAAkABcAAAAAAAAAAAAkABgAAAAAAAEAAAAlABcAAAABAAAAAAAlABgAAAABAAEAAAAkABkAAQAEAAQAAAAlABkAAQAFAAQAAAAmABMAAAAAAAAAAAAmABQAAAAAAAEAAAAnABMAAAABAAAAAAAnABQAAAABAAEAAAAmABUAAAAAAAAAAAAmABYAAAAAAAEAAAAnABUAAAABAAAAAAAnABYAAAABAAEAAAAmABcAAAAAAAAAAAAmABgAAAAAAAEAAAAnABcAAAABAAAAAAAnABgAAAABAAEAAAAmABkAAAAAAAAAAAAnABkAAAABAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAEAAAApABMAAAABAAAAAAApABQAAAABAAEAAAAoABUAAAAAAAAAAAAoABYAAAAAAAEAAAApABUAAAABAAAAAAApABYAAAABAAEAAAAoABcAAAAAAAAAAAAoABgAAAAAAAEAAAApABcAAAABAAAAAAApABgAAAABAAEAAAAoABkAAAAAAAAAAAApABkAAAABAAAAAAAqABMAAAAAAAAAAAAqABQAAAAAAAEAAAArABMAAAABAAAAAAArABQAAAABAAEAAAAqABUAAAAAAAAAAAAqABYAAAAAAAEAAAArABUAAAABAAAAAAArABYAAAABAAEAAAAqABcAAAAAAAAAAAAqABgAAAAAAAEAAAArABcAAAABAAAAAAArABgAAAABAAEAAAAqABkAAAAAAAAAAAArABkAAAABAAAAAAAsABMAAQADAAQAAAAsABQAAAAAAAEAAAAtABMAAQAAAAMAAAAtABQAAQAEAAcAAAAsABUAAAAAAAAAAAAsABYAAAAAAAEAAAAtABUAAQAEAAgAAAAsABcAAAAAAAAAAAAsABgAAAAAAAEAAAAtABgAAAABAAEAAAAsABkAAAAAAAAAAAAtABkAAAABAAAAAAAuABMAAQABAAMAAAAuABQAAQAFAAcAAAAuABUAAQAFAAgAAAAuABgAAAAAAAEAAAAuABkAAAAAAAAAAAAkABAAAQAEAAAAAAAbABMAAQAEAAcAAAA=")
tile_set = SubResource("TileSet_6m3ny")

[node name="moveis2" type="TileMapLayer" parent="."]
position = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAZAA8AAAADAAEAAAAZABAAAAADAAEAAAAZABEAAAADAAEAAAAZABIAAAADAAEAAAAZABMAAAADAAEAAAAZABQAAAADAAEAAAAZABUAAAADAAEAAAAZABYAAAADAAEAAAAZABcAAAADAAEAAAAZABgAAAADAAEAAAAvAA8AAAAGAAEAAAAvABAAAAAGAAEAAAAvABEAAAAGAAEAAAAvABIAAAAGAAEAAAAvABMAAAAGAAEAAAAvABQAAAAGAAEAAAAvABUAAAAGAAEAAAAvABYAAAAGAAEAAAAvABcAAAAGAAEAAAAvABgAAAAGAAEAAAAaAA8AAAABAAQAAAAbAA8AAAABAAQAAAAcAA8AAAABAAQAAAAdAA8AAAABAAQAAAAeAA8AAAABAAQAAAAfAA8AAAABAAQAAAAhAA8AAAABAAQAAAAiAA8AAAABAAQAAAAjAA8AAAABAAQAAAAkAA8AAAABAAQAAAAlAA8AAAABAAQAAAAmAA8AAAABAAQAAAAnAA8AAAABAAQAAAAoAA8AAAABAAQAAAApAA8AAAABAAQAAAAqAA8AAAABAAQAAAArAA8AAAABAAQAAAAsAA8AAAABAAQAAAAtAA8AAAABAAQAAAAtABAAAAABAAQAAAAuABAAAQAFAAYAAAAuAA8AAAABAAQAAAAsABAAAQAFAAUAAAArABAAAQAEAAAAAAAqABAAAAABAAQAAAApABAAAAABAAQAAAAnABAAAAABAAQAAAAmABAAAAABAAQAAAAlABAAAAABAAQAAAAjABAAAAABAAQAAAAiABAAAQABAAoAAAAhABAAAAABAAQAAAAfABAAAAABAAQAAAAdABAAAQAEAAAAAAAaABAAAAABAAQAAAAaABEAAAABAAQAAAAbABEAAAABAAQAAAAcABEAAAABAAQAAAAdABEAAAABAAQAAAAeABEAAAABAAQAAAAfABEAAAABAAQAAAAgABEAAAABAAQAAAAhABEAAAABAAQAAAAiABEAAAABAAQAAAAjABEAAAABAAQAAAAkABEAAAABAAQAAAAlABEAAAABAAQAAAAmABEAAAABAAQAAAAnABEAAAABAAQAAAAoABEAAAABAAQAAAApABEAAAABAAQAAAAqABEAAAABAAQAAAArABEAAAABAAQAAAAsABEAAAABAAQAAAAtABEAAAABAAQAAAAuABEAAAABAAQAAAAaABIAAAABAAQAAAAbABIAAAABAAQAAAAcABIAAAABAAQAAAAdABIAAAABAAQAAAAeABIAAAABAAQAAAAfABIAAAABAAQAAAAgABIAAAABAAQAAAAhABIAAAABAAQAAAAiABIAAAABAAQAAAAjABIAAAABAAQAAAAkABIAAAABAAQAAAAlABIAAAABAAQAAAAmABIAAAABAAQAAAAnABIAAAABAAQAAAAoABIAAAABAAQAAAApABIAAAABAAQAAAAqABIAAAABAAQAAAArABIAAAABAAQAAAAsABIAAQADAAMAAAAtABIAAQAAAAIAAAAuABIAAQABAAIAAAAZAA0AAAADAAAAAAAaAA0AAAAEAAEAAAAbAA0AAAAEAAEAAAAcAA0AAAAEAAEAAAAdAA0AAAAEAAEAAAAeAA0AAAAEAAEAAAAfAA0AAAAEAAEAAAAgAA0AAAAEAAEAAAAhAA0AAAAEAAEAAAAiAA0AAAAEAAEAAAAjAA0AAAAEAAEAAAAkAA0AAAAEAAEAAAAlAA0AAAAEAAEAAAAmAA0AAAAEAAEAAAAnAA0AAAAEAAEAAAAoAA0AAAAEAAEAAAApAA0AAAAEAAEAAAAqAA0AAAAEAAEAAAArAA0AAAAEAAEAAAAsAA0AAAAEAAEAAAAtAA0AAAAEAAEAAAAuAA0AAAAEAAEAAAAvAA0AAAAGAAAAAAAvAA4AAAAGAAEAAAAZAA4AAAADAAEAAAAZABoAAAADAAQAAAAaABoAAAAEAAIAAAAbABoAAAAEAAIAAAAcABoAAAAEAAIAAAAdABoAAAAEAAIAAAAeABoAAAAEAAIAAAAfABoAAAAEAAIAAAAgABoAAAAEAAIAAAAhABoAAAAEAAIAAAAiABoAAAAEAAIAAAAjABoAAAAEAAIAAAAkABoAAAAEAAIAAAAlABoAAAAEAAIAAAAmABoAAAAEAAIAAAAnABoAAAAEAAIAAAAoABoAAAAEAAIAAAApABoAAAAEAAIAAAAqABoAAAAEAAIAAAArABoAAAAEAAIAAAAsABoAAAAEAAIAAAAtABoAAAAEAAIAAAAuABoAAAAEAAIAAAAvABoAAAAGAAQAAAAZABkAAAADAAEAAAAvABkAAAAGAAEAAAAaAA4AAAABAAQAAAAbAA4AAAABAAQAAAAcAA4AAAABAAQAAAAdAA4AAAABAAQAAAAeAA4AAAABAAQAAAAfAA4AAAABAAQAAAAgAA4AAAABAAQAAAAhAA4AAAABAAQAAAAiAA4AAAABAAQAAAAjAA4AAAABAAQAAAAkAA4AAAABAAQAAAAlAA4AAAABAAQAAAAmAA4AAAABAAQAAAAnAA4AAAABAAQAAAAoAA4AAAABAAQAAAApAA4AAAABAAQAAAAqAA4AAAABAAQAAAArAA4AAAABAAQAAAAsAA4AAAABAAQAAAAtAA4AAAABAAQAAAAuAA4AAAABAAQAAAAaABMAAQAAAAAAAAAaABQAAQAAAAEAAAAbABQAAQAEAAgAAAAaABUAAAAAAAAAAAAaABYAAAAAAAEAAAAbABUAAAABAAAAAAAbABYAAQAAAAUAAAAaABcAAQADAAUAAAAaABgAAQADAAYAAAAbABcAAQAAAAYAAAAbABgAAQABAAUAAAAaABkAAAAAAAAAAAAbABkAAQABAAYAAAAcABMAAQAAAAQAAAAcABQAAQAFAAgAAAAdABMAAAABAAAAAAAdABQAAAABAAEAAAAcABUAAAAAAAAAAAAcABYAAQAAAAUAAAAdABUAAAABAAAAAAAdABYAAAABAAEAAAAcABcAAQAAAAYAAAAcABgAAQABAAUAAAAdABcAAQACAAUAAAAdABgAAQACAAYAAAAcABkAAQABAAYAAAAdABkAAAABAAAAAAAeABMAAAAAAAAAAAAeABQAAAAAAAEAAAAfABMAAAABAAAAAAAfABQAAAABAAEAAAAeABUAAAAAAAAAAAAeABYAAAAAAAEAAAAfABUAAAABAAAAAAAfABYAAAABAAEAAAAeABcAAAAAAAAAAAAeABgAAAAAAAEAAAAfABcAAAABAAAAAAAfABgAAAABAAEAAAAeABkAAAAAAAAAAAAfABkAAAABAAAAAAAgABMAAAAAAAAAAAAgABQAAAAAAAEAAAAhABMAAAABAAAAAAAhABQAAAABAAEAAAAgABUAAAAAAAAAAAAgABYAAAAAAAEAAAAhABUAAAABAAAAAAAhABYAAAABAAEAAAAgABcAAAAAAAAAAAAgABgAAAAAAAEAAAAhABcAAAABAAAAAAAhABgAAAABAAEAAAAgABkAAAAAAAAAAAAhABkAAAABAAAAAAAiABMAAAAAAAAAAAAiABQAAAAAAAEAAAAjABMAAAABAAAAAAAjABQAAAABAAEAAAAiABUAAAAAAAAAAAAiABYAAAAAAAEAAAAjABUAAAABAAAAAAAjABYAAAABAAEAAAAiABcAAAAAAAAAAAAiABgAAAAAAAEAAAAjABcAAAABAAAAAAAjABgAAAABAAEAAAAiABkAAAAAAAAAAAAjABkAAAABAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAEAAAAlABMAAAABAAAAAAAlABQAAAABAAEAAAAkABUAAAAAAAAAAAAkABYAAAAAAAEAAAAlABUAAAABAAAAAAAlABYAAAABAAEAAAAkABcAAAAAAAAAAAAkABgAAAAAAAEAAAAlABcAAAABAAAAAAAlABgAAAABAAEAAAAkABkAAQAEAAQAAAAlABkAAQAFAAQAAAAmABMAAAAAAAAAAAAmABQAAAAAAAEAAAAnABMAAAABAAAAAAAnABQAAAABAAEAAAAmABUAAAAAAAAAAAAmABYAAAAAAAEAAAAnABUAAAABAAAAAAAnABYAAAABAAEAAAAmABcAAAAAAAAAAAAmABgAAAAAAAEAAAAnABcAAAABAAAAAAAnABgAAAABAAEAAAAmABkAAAAAAAAAAAAnABkAAAABAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAEAAAApABMAAAABAAAAAAApABQAAAABAAEAAAAoABUAAAAAAAAAAAAoABYAAAAAAAEAAAApABUAAAABAAAAAAApABYAAAABAAEAAAAoABcAAAAAAAAAAAAoABgAAAAAAAEAAAApABcAAAABAAAAAAApABgAAAABAAEAAAAoABkAAAAAAAAAAAApABkAAAABAAAAAAAqABMAAAAAAAAAAAAqABQAAAAAAAEAAAArABMAAAABAAAAAAArABQAAAABAAEAAAAqABUAAAAAAAAAAAAqABYAAAAAAAEAAAArABUAAAABAAAAAAArABYAAAABAAEAAAAqABcAAAAAAAAAAAAqABgAAAAAAAEAAAArABcAAAABAAAAAAArABgAAAABAAEAAAAqABkAAAAAAAAAAAArABkAAAABAAAAAAAsABMAAQADAAQAAAAsABQAAAAAAAEAAAAtABMAAQAAAAMAAAAtABQAAQAEAAcAAAAsABUAAAAAAAAAAAAsABYAAAAAAAEAAAAtABUAAQAEAAgAAAAsABcAAAAAAAAAAAAsABgAAAAAAAEAAAAtABgAAAABAAEAAAAsABkAAAAAAAAAAAAtABkAAAABAAAAAAAuABMAAQABAAMAAAAuABQAAQAFAAcAAAAuABUAAQAFAAgAAAAuABgAAAAAAAEAAAAuABkAAAAAAAAAAAAkABAAAQAEAAAAAAAbABMAAQADAAIAAAA=")
tile_set = SubResource("TileSet_6m3ny")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(588, 324)
zoom = Vector2(3, 3)

[node name="tapete_instancia" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tapete_instancia"]
position = Vector2(596, 412)
shape = SubResource("RectangleShape2D_yh4k7")

[node name="cama_static" type="StaticBody2D" parent="."]
position = Vector2(0.5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cama_static"]
position = Vector2(428, 324.5)
shape = SubResource("RectangleShape2D_ro7s7")

[node name="cama_area2d" type="Area2D" parent="cama_static"]
position = Vector2(-0.5, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cama_static/cama_area2d"]
position = Vector2(429, 324)
shape = SubResource("RectangleShape2D_ro7s7")

[node name="dialogo_cama" type="Label" parent="."]
texture_filter = 1
offset_left = 438.0
offset_top = 278.0
offset_right = 568.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
text = "A cama esta suja"
